# shiftscope

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MAINTAINERS.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  docker.yml  dogfood.yml  publish.yml
.hypothesis/constants/: 09eb4940fceb4289  3b5c3ea7ed199e3e  3c5051fbd13851d2  67b0a8ccf18bf5d2  6b378fac08c92bdb  8396d47216f26382  a0a833e6633db6c8  a794f05fe07eeff3  c782af2d3d8a2b84  cddfab7ad0743f2c  da39a3ee5e6b4b0d  db912e17d031509c  e36703a181551a13
analyzers/dra_network/: __init__.py  analyzer.py  parser.py
analyzers/gateway_api/: __init__.py  analyzer.py  parser.py  rules.py
analyzers/gateway_api/configs/: annotation_mappings.yaml
analyzers/helm4/: __init__.py  analyzer.py  parser.py  rules.py
charts/shiftscope/: Chart.yaml  values.yaml
charts/shiftscope/templates/: deployment.yaml  job.yaml  service.yaml  serviceaccount.yaml
docs/: blog-draft.md  kubecon-cfp-draft.md
docs/adr/: 001-unified-migration-intelligence-sdk.md  002-v0.3-behavioral-detection-mcp-security.md
examples/: agent-config-ungoverned.json  agent-readiness.json  argo-workflow-example.yaml  argo-workflow-template.yaml  dra-network-intent.json  mcp-config-insecure.json  mcp-config-secure.json  telco-intent.json
examples/helm-sample-app/: .helmignore  Chart.yaml  values.yaml
examples/helm-sample-app/templates/: deployment.yaml  service.yaml
examples/ingress-nginx/: basic.yaml
examples/k8s/: kagent-mcpserver.yaml  toolhive-mcpserver.yaml
github-action/: action.yml  example-workflow.yml
src/shiftscope/: __init__.py
src/shiftscope/ai/: augment.py
src/shiftscope/analyzers/agent_readiness/: __init__.py  analyzer.py  rules.py
src/shiftscope/analyzers/dra_network/: __init__.py  analyzer.py  parser.py  rules.py
src/shiftscope/analyzers/gateway_api/: __init__.py  analyzer.py  behavioral_rules.py  parser.py  rules.py
src/shiftscope/analyzers/gateway_api/configs/: implementations.yaml
src/shiftscope/analyzers/helm4/: __init__.py  analyzer.py  parser.py
src/shiftscope/analyzers/mcp_security/: __init__.py  analyzer.py  parser.py  rules.py
src/shiftscope/analyzers/telco_intent/: __init__.py  analyzer.py  rules.py
src/shiftscope/cli/: app.py
src/shiftscope/core/: analyzer.py  models.py  rule.py
src/shiftscope/eval/: harness.py
src/shiftscope/mcp/: bridge.py  discovery.py
src/shiftscope/render/: json_renderer.py  markdown_renderer.py  sarif_renderer.py  table_renderer.py
tests/: conftest.py  stubs.py  test_ai_augment.py  test_analyzer.py  test_cli.py  test_cli_errors.py  test_eval_harness.py  test_hypothesis.py  test_mcp_bridge.py  test_mcp_discovery.py  test_mcp_serve.py  test_models.py  test_package_smoke.py  test_plugin_discovery.py  test_render.py  test_rule.py  test_run_rules_resilience.py  test_sarif_renderer.py  test_table_renderer.py
tests/analyzers/: test_agent_readiness.py  test_agent_readiness_v2.py  test_dra_network.py  test_gateway_api.py  test_gateway_api_behavioral.py  test_helm4.py  test_mcp_security.py  test_telco_intent.py
